--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </div>
                     <div class="intrests__images--2">
                         <img src="./images/city-2.jpg" alt="Culture" />
-                        <h4>Ooty (Udhagamandalam), India</h4>
+                        <h4>Ooty, India</h4>
                     </div>
                     <div class="intrests__images--3">
                         <img src="./images/city-3.jpg" alt="Food & Drink" />
@@ -237,6 +237,9 @@
     </div>
     <div class="banner">
         <img src="./images/banner.jpg" alt="banner pic">
+    </div>
+    <div class="banner__text">
+        <h1>Escape The Ordinary And Discover The Extraordinary</h1>
     </div>
 
       <footer class="footer">
@@ -326,7 +329,6 @@
         <a href="#"><i class="fa-brands fa-tiktok"></i></a>
       </div>
 
-      <button class="ask-btn">✨ Ask Ollie</button>
     </div>
   </footer>
 
